2004-03-05  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add StepInto and
	implement StepOver.  Use proc.CurrentFrame where possible.

2004-03-05  John BouAntoun  <jba-mono@optusnet.com.au>

	* src/Main/Base/Gui/Dialogs/ProjectOptionsDialog.cs : added configuration renaming
	* src/Main/Base/Gui/Dialogs/TreeViewOptions.cs : made InitializeComponent virtual so ProjectOptionDialog could override (see above)

2004-03-04  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add CurrentFilename and
	CurrentLineNumber props.  Fix Backtrace.

2004-03-04  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add Started/Stopped and 
	Paused/Resumed events plus a CurrentFrame property.

2004-03-04  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add Pause/Resume and make
	IsRunning public.

2004-03-04  Todd Berman  <tberman@sevenl.net>

	* build/AddIns/SharpDevelopCore.addin: adding debug menu.
	* src/Main/Base/Services/DebuggingService.cs: added stub for step over.
	* src/Main/Base/Commands/DebuggerCommands.cs: added StepOver.
	* src/AddIns/DisplayBindings/SourceEditor/Gui/SourceEditorBuffer.cs:
		change current execution from red to yellow.
	* ChangeLog: formatting fixes, use this format from now on.

2004-03-04  Daniel Kornhauser <dkor@alum.mit.edu>

	* data/resources/glade/CSharp.glade: 
		created glade file with OutputOptionsPanel UI
	* src/AddIns/BackendBindings/CSharpBinding/Gui/OutputOptionsPanel.cs:
		Gladed CodeGenerationPanel

2004-03-04 John BouAntoun  <jba-mono@optusnet.com.au>
	
	* src/Main/Base/Gui/Dialogs/ProjectOptionsDialog.cs: 
		enabled context menu's for project configurations
	* src/Main/Base/Gui/Dialogs/TreeViewOptions.cs: 
		made SelectNode virtual so ProjectOptionsDialog could override
	* data/resources/glade/Base.glade: 
		fiddled with TreeviewOptions Dialog

2004-03-04  Daniel Kornhauser <dkor@alum.mit.edu>