@@ -18,6 +18,7 @@ namespace ICSharpCode.SharpDevelop.Services
 		private string mime;
 		// the number of seconds sinced the Epoch when the item was added to the list.
 		private string timestamp;
+		private readonly DateTime epoch = new DateTime (1970, 1, 1, 0, 0, 0, 0);
 		// may need to change to allow for > 1
 		// lets wait til it's needed though
 		private string group;
@@ -25,11 +26,11 @@ namespace ICSharpCode.SharpDevelop.Services
 		// these 3 are required
 		public RecentItem (string uri)
 		{
+			// TODO: uri sanity check
 			this.uri = uri;
 			this.mime = Vfs.GetMimeType (uri);
-			// FIXME 00:00:00 UTC on January 1, 1970 (Unix Epoch)
-			// Now - Epoch in seconds
-			this.timestamp = DateTime.Now.ToString ();
+			DateTime now = DateTime.Now.ToUniversalTime ();
+			this.timestamp = ((int) (now - epoch).TotalSeconds).ToString ();
 		}
 
 		public string Mime
